--- a/src/index.html
+++ b/src/index.html
@@ -38,52 +38,57 @@
   </style>
 </head>
 <body class="bg-gray-100 font-sans">
-  <!-- Auth Section (Unchanged) -->
-  <div id="auth-section" class="min-h-screen flex items-center justify-center bg-gray-100">
-    <div id="login-modal" class="bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
-      <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Login</h2>
-      <div class="space-y-4">
-        <input id="login-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <input id="login-password" type="password" placeholder="Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <button id="login-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Login</button>
-        <div class="text-center space-x-4">
-          <button id="show-signup-btn" onclick="document.getElementById('signup-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Sign Up</button>
-          <button id="show-reset-btn" onclick="document.getElementById('reset-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Forgot Password?</button>
-        </div>
-      </div>
-    </div>
-    <div id="signup-modal" class="hidden bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
-      <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Sign Up</h2>
-      <div class="space-y-4">
-        <input id="signup-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <input id="signup-password" type="password" placeholder="Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <input id="signup-confirm-password" type="password" placeholder="Confirm Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <input id="signup-family-code" type="text" placeholder="Family Code" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <select id="signup-currency" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-          <option value="INR">INR</option>
-          <option value="USD">USD</option>
-        </select>
-        <select id="signup-account-type" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-          <option value="admin">Admin</option>
-          <option value="child">Child</option>
-        </select>
-        <button id="signup-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Sign Up</button>
-        <div class="text-center">
-          <button id="show-login-from-signup-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('signup-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
-        </div>
-      </div>
-    </div>
-    <div id="reset-modal" class="hidden bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
-      <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Reset Password</h2>
-      <div class="space-y-4">
-        <input id="reset-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <button id="reset-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Send Reset Link</button>
-        <div class="text-center">
-          <button id="show-login-from-reset-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('reset-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
-        </div>
+<!-- Auth Section -->
+<div id="auth-section" class="min-h-screen flex items-center justify-center bg-gray-100">
+  <div id="login-modal" class="bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
+    <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Login</h2>
+    <div class="space-y-4">
+      <input id="login-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <input id="login-password" type="password" placeholder="Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <button id="login-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Login</button>
+      <div class="text-center space-x-4">
+        <button id="show-signup-btn" onclick="document.getElementById('signup-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Sign Up</button>
+        <button id="show-reset-btn" onclick="document.getElementById('reset-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Forgot Password?</button>
       </div>
     </div>
   </div>
+  <div id="signup-modal" class="hidden bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
+    <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Sign Up</h2>
+    <div class="space-y-4">
+      <input id="signup-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <input id="signup-password" type="password" placeholder="Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <input id="signup-confirm-password" type="password" placeholder="Confirm Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <div id="admin-family-code-option" class="flex items-center space-x-2">
+        <input id="use-existing-family-code" type="checkbox" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+        <label for="use-existing-family-code" class="text-sm text-gray-700">Use existing family code</label>
+      </div>
+      <input id="signup-family-code" type="text" placeholder="6-digit alphanumeric Family Code (required for child)" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <select id="signup-currency" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <option value="INR">INR</option>
+        <option value="USD">USD</option>
+      </select>
+      <select id="signup-account-type" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <option value="admin">Admin</option>
+        <option value="child">Child</option>
+      </select>
+      <button id="signup-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Sign Up</button>
+      <div class="text-center">
+        <button id="show-login-from-signup-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('signup-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
+      </div>
+    </div>
+  </div>
+  <div id="reset-modal" class="hidden bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
+    <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Reset Password</h2>
+    <div class="space-y-4">
+      <input id="reset-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <button id="reset-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Send Reset Link</button>
+      <div class="text-center">
+        <button id="show-login-from-reset-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('reset-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <!-- App Section -->
   <div id="app-section" class="hidden min-h-screen bg-gray-100">
@@ -284,40 +289,39 @@
   </div>
 </div>
       <!-- Profile Section (Unchanged) -->
-      <div id="profile-section" class="hidden space-y-4 sm:space-y-6">
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-          <div class="flex justify-between items-center mb-4">
-            <h3 class="text-base sm:text-lg font-semibold text-gray-700">User Profile</h3>
-            <div class="space-x-2">
-              <button id="edit-profile" class="bg-blue-600 text-white px-3 py-2 rounded-lg hover:bg-blue-700 transition text-sm">Edit</button>
-              <button id="save-profile" class="hidden bg-green-600 text-white px-3 py-2 rounded-lg hover:bg-green-700 transition text-sm">Save</button>
-            </div>
-          </div>
-          <div class="space-y-4">
-            <div>
-              <label class="block text-sm font-medium text-gray-700">Email</label>
-              <input id="profile-email" type="email" class="mt-1 w-full p-2 border rounded-lg bg-gray-100" readonly>
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-gray-700">Currency</label>
-              <select id="profile-currency" class="mt-1 w-full p-2 border rounded-lg bg-gray-100" disabled>
-                <option value="INR">INR</option>
-                <option value="USD">USD</option>
-              </select>
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-gray-700">Family Code</label>
-              <input id="profile-family-code" type="text" class="mt-1 w-full p-2 border rounded-lg bg-gray-100" readonly>
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-gray-700">Account Type</label>
-              <select id="profile-account-type" class="mt-1 w-full p-2 border rounded-lg bg-gray-100" disabled>
-                <option value="admin">Admin</option>
-                <option value="child">Child</option>
-              </select>
-            </div>
-          </div>
-        </div>
+      
+<!-- Profile Section -->
+<div id="profile-section" class="hidden space-y-4 sm:space-y-6">
+  <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+    <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">User Profile</h3>
+    <div class="space-y-4">
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Email</label>
+        <input id="profile-email" type="email" readonly class="w-full p-3 border rounded-lg bg-gray-100 focus:outline-none">
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Currency</label>
+        <select id="profile-currency" disabled class="w-full p-3 border rounded-lg bg-gray-100 focus:outline-none">
+          <option value="INR">INR</option>
+          <option value="USD">USD</option>
+        </select>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Family Code</label>
+        <input id="profile-family-code" type="text" readonly class="w-full p-3 border rounded-lg bg-gray-100 focus:outline-none">
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Account Type</label>
+        <select id="profile-account-type" disabled class="w-full p-3 border rounded-lg bg-gray-100 focus:outline-none">
+          <option value="admin">Admin</option>
+          <option value="child">Child</option>
+        </select>
+      </div>
+      <button id="edit-profile" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition w-full sm:w-auto">Edit Profile</button>
+      <button id="save-profile" class="hidden bg-green-600 text-white p-3 rounded-lg hover:bg-green-700 transition w-full sm:w-auto">Save Profile</button>
+    </div>
+  </div>
+</div>
       </div>
     </main>
   </div>
