--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
   <main class="p-4 sm:p-6">
     <!-- Swipeable Tabs Container -->
     <div id="swipeable-tabs" class="relative w-full overflow-x-hidden" aria-label="Swipe to change tabs">
-    <!-- Dashboard Section -->
+   <!-- Dashboard Section -->
 <div id="dashboard-section" class="space-y-4 sm:space-y-6 transition-transform duration-300 ease-in-out">
   <!-- Filter Controls -->
   <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
@@ -165,8 +165,9 @@
   <div id="budget-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
   <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
   <!-- Spending Pie Chart -->
-  <div id="spending-chart-container" class="mt-4">
-    <canvas id="spending-pie-chart" style="max-width: 400px; margin: 0 auto;"></canvas>
+  <div id="spending-chart-container" class="mt-4 bg-white p-4 sm:p-6 rounded-lg shadow-md">
+    <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Spending by Category</h3>
+    <canvas id="spending-pie-chart" style="max-width: 400px; margin: 0 auto; min-height: 200px;"></canvas>
   </div>
 </div>
       <!-- Transactions Section -->
